# orbitvpn

./: .env.example  .gitignore  BOT_MANAGER.md  CHANGES.md  CLAUDE.md  CLEANUP.md  FIX.md  NODE_SETUP.md  PROMPT.md  REFACTORING.md  STEPS.md  TO-DO.md  TODO.md  a.py  alembic.ini  bot_manager.py  botoff.sh  boton.sh  config.py  diagnose_vpn.py  full_app_code.py  git.sh  manager_daemon.py  plans.json  pyproject.toml  requirements.txt  run.py  test_notifications.py
app/admin/: __init__.py  keyboards.py  middleware.py
app/api/: __init__.py  base.py  client.py  helpers.py  manager.py  marzban.py
app/core/: handlers.py  keyboards.py
app/db/: base.py  cache.py  db.py  init.py  init_db.py  models.py  payments.py  user.py
app/keys/: __init__.py  _callbacks.py  _enums.py  admin.py  builder.py  common.py  keyboards.py  manager.py  user.py
app/locales/: locales.py  tph.py
app/middleware/: __init__.py
app/models/: __init__.py  db.py  payments.py  server.py
app/payments/: __init__.py  manager.py  models.py
app/repo/: db.py  init_db.py  marzban_client.py  models.py  payments.py  user.py
app/routers/: __init__.py  auth.py  configs.py  helpers.py  payments.py  settings.py  subscriptions.py  utils.py
app/ui/: TODO.md  balance_v2.html  style.css  style.css.backup
mac/: OVERVIEW.md  QUICKSTART.md  README.md
manager/: cli.py
migrations/: add_payment_expires_at.sql  add_payment_metadata.sql
static/: index.html  index_en.html  main.css  main.js
tests/: acp.py
website/: App.tsx  README.md  index.html  metadata.json  package-lock.json  package.json  types.ts
(+157 files in other folders)
